--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F6F6F6"
     tools:context=".MainActivity">
 
     <TextView
@@ -34,9 +35,10 @@
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.07">
+        app:layout_constraintVertical_bias="0.105">
 
         <androidx.cardview.widget.CardView
             android:layout_width="350dp"
@@ -44,10 +46,10 @@
             android:layout_margin="10dp"
             app:cardBackgroundColor="#E91E63"
             app:cardCornerRadius="7dp"
-            app:cardElevation="3dp" >
+            app:cardElevation="5dp">
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/quotestxt"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="10dp"
@@ -65,7 +67,28 @@
             android:layout_height="100dp"
             android:layout_margin="10dp"
             app:cardCornerRadius="7dp"
-            app:cardElevation="3dp" />
+            app:cardElevation="5dp">
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="15dp"
+                app:srcCompat="@drawable/siren" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="10dp"
+                android:fontFamily="@font/product_sans_bold"
+                android:text="SOS ALERT !"
+                android:textColor="#F44336"
+                android:textSize="36sp"
+                android:textStyle="bold" />
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
