--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,7 @@
                 android:fontFamily="@font/playball"
                 android:gravity="center"
                 android:text="“Ah, women. They make the highs higher and the lows more frequent ”"
-                android:textColor="#D3FFFFFF"
+                android:textColor="#EDFFFFFF"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:typeface="normal" />
@@ -66,6 +66,7 @@
             android:layout_width="310dp"
             android:layout_height="100dp"
             android:layout_margin="10dp"
+            android:onClick="soshelp"
             app:cardCornerRadius="7dp"
             app:cardElevation="5dp">
 
