--- a/app/src/main/res/layout/dialog_number.xml
+++ b/app/src/main/res/layout/dialog_number.xml
@@ -16,7 +16,7 @@
         android:textStyle="bold" />
 
     <EditText
-        android:id="@+id/etEmail"
+        android:id="@+id/etPhone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
