--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -136,6 +136,7 @@
             android:layout_width="150dp"
             android:layout_height="100dp"
             android:layout_margin="10dp"
+            android:onClick="menstr"
             app:cardBackgroundColor="#FF8F00"
             app:cardCornerRadius="7dp"
             app:cardElevation="3dp">
